style.css
body {
    font-family: 'Roboto', sans-serif;
    background-color: #D8DEE9;
}

a {
    text-decoration: none;
}

.header {
    display: flex;
    justify-content: space-around;
    /* align-content: space-around; */
    /* border: 1px solid red; */
    text-align: center;
    margin: 0;
    padding: 20px 0;
    font-family: 'Merriweather Sans', sans-serif;
    font-weight: 700;
    font-size: 1.5em;
    background-color: rgb(245, 247, 250);
}

.header-svg {
    margin: 0 .5em;
    height: 1em;
    width: 1em;
    position: relative;
    display: inline-block;
}

.tooltip {
    position: relative;
    display: inline-block;
}

.tooltip .tooltip-text {
    visibility: hidden;
    width: 120px;
    /* background-color: black; */
    color: #343d46;
    font-size: .5em;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    
    /* Position the tooltip */
    position: absolute;
    z-index: 1;
    top: 100%;
    left: 50%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity .6s;

}

.tooltip:hover .tooltip-text{
    visibility: visible;
    opacity: 1;
}

.header-right {
    width: 25%;
}

.header-center {
    width: 25%;
}

.header-left {
    text-align: right;
    width: 25%;
}

.container {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    /* width: 80vw; */
    /* border: 1px solid blue; */
}

.first-name {
    color: black;
}

.last-name {
    margin-left: -.3em;
    color: #65737e;
}

.section {
    padding: 5vh 10vw;
}

.hello {
    padding: 6em 10vw;
    background-color: rgb(245, 247, 250);
    font-family: 'Merriweather Sans', sans-serif;
}

.heading-2 {
    font-size: 3.5em;
    line-height: 1em;
    font-weight:800;
    margin: .5em 0;
}

.heading-4 {
    font-family: 'Merriweather Sans', sans-serif;
    letter-spacing: -.02em;
    font-size: 1.7em;
    font-weight: 300;
    margin: 0;
}

.heading-5 {
    font-family: 'Merriweather Sans', sans-serif;
    letter-spacing: -.02em;
    font-size: 2em;
    font-weight: 700;
    margin: 0;
}

.sub-heading {
    font-family: 'Merriweather Sans', sans-serif;
    font-size: 1.3em;
}

.button {
    font-family: 'Merriweather Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: .1em;
    font-size: .7rem;
    width: 20em;
    height: 4em;
    background: #5fb3b3;
    border: 0;
    border-radius: 1em;
    color: rgb(245, 247, 250);
    font-weight: 700;
    transition: background .5s ease;
}

.button:hover {
    background: #468383;
    /* background: linear-gradient(20deg, rgba(95,179,179,1) 0%, rgba(197,148,197,1) 100%);  */
}

.st0 {
    fill: black;
}

.current-project {
    display: flex;
    justify-content: space-between;
}

.section-left {
    padding: 1em 1em 1em 0;
}

.section-right {
    margin-left: 4em;
    padding: 1em;
    width: 80%;
    display: flex;
    flex-flow: column;
}

.flattering-picture {
    background: rgb(205,113,120);
    background: linear-gradient(305deg, rgba(205,113,120,1) 0%, rgba(197,148,197,1) 40%, rgba(95,179,179,1) 100%);
    height: 50vh;
    background-image: url(./assets/hans.jpg);
    background-size: 100vw;
    background-position: 20%;
    background-repeat: no-repeat;
}

.hans-picture {
    object-fit: cover;
    width: 100vw;
}

.about-me {
    background-color: rgb(245, 247, 250);
}

.resume {
    text-align: center;
    background: #468383;
}

.resume-btn {
    background: #ec5f67;
}

.resume-btn:hover {
    background: #ac464b;
}

.project {
    display: grid;
    grid-template-columns: 2fr 1fr;
    padding: 2em 0;
    /* border: 1px solid sandybrown; */
}


.project > div span {
    background: #C0C5Ce;
    font-family: 'Merriweather Sans', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: .05em;
    font-size: .8rem;
    color: #65737e;
    border-radius: 1em;
    padding: .2em .7em;
    margin-right: .5em;
}

.project-img-container {
    width: 350px;
    /* border: 1px solid red; */
    margin-left: 2em;
    
    
}

.project-img {
    width: 100%;
    height: auto;
    opacity: initial;
    background: linear-gradient(305deg, rgba(205,113,120,1) 0%, rgba(197,148,197,1) 80%);
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.btn-link {
    text-decoration: none;
}

.project-btn {
    width: 12em;
}

.github-btn {
    width: 12em;
    background: #65737e;
}

.github-btn:hover {
    background: #343d46;
}

.footer {
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    min-height: 15vh;
    background-color: rgb(199, 203, 211);
    font-size: .8em;
    color: #65737e;
}

.footer div {
    width: 30vw;
    padding: 1em 2em;
    /* border: 1px solid red; */
}

.footer div:nth-of-type(2) {
    background-color: rgba(0,0,0,.03);
    /* color: #5fb3b3; */
    align-self: stretch;
}

.footer a {
    text-decoration: none;
    color: inherit;
}

